Move images to S3 Add Markdown component to support portfolio items

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/prof_pic_trans_cropped.png" />
+    <link rel="icon" href="https://s3.ca-central-1.amazonaws.com/cdn.matthewmeade.ca/portfolio/general/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#343a40" />
     <meta name="description" content="Matthew Meade's Portfolio" />
