Remove noscript tag, site is pre rendered now

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="https://s3.ca-central-1.amazonaws.com/cdn.matthewmeade.ca/portfolio/general/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#343a40" />
-    <meta name="description" content="Matthew Meade's Portfolio" />
-    <title>Matthew Meade</title>
-  </head>
-  <body>
-    <noscript>
-      <h1>Matthew Meade</h1>
-      <p>You need to enable JavaScript to view this page</p>
-      <p>email: email@MatthewMeade.ca</p>
-      <p>GitHub: <a href="https://github.com/mafumeade">https://github.com/mafumeade</a></p>
-    </noscript>
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link
+            rel="icon"
+            href="https://s3.ca-central-1.amazonaws.com/cdn.matthewmeade.ca/portfolio/general/favicon.png"
+        />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#343a40" />
+        <meta name="description" content="Matthew Meade's Portfolio" />
+        <title>Matthew Meade</title>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
