--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
             rel="icon"
             href="https://s3.ca-central-1.amazonaws.com/cdn.matthewmeade.ca/portfolio/general/favicon.png"
         />
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto&display=swap" rel="stylesheet">
+
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#343a40" />
         <meta name="description" content="Matthew Meade's Portfolio" />
