--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link
-            rel="icon"
-            href="https://s3.ca-central-1.amazonaws.com/cdn.matthewmeade.ca/portfolio/general/favicon.png"
-        />
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="https://s3.ca-central-1.amazonaws.com/cdn.matthewmeade.ca/portfolio/general/favicon.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto&display=swap" rel="stylesheet" />
 
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#343a40" />
-        <meta name="description" content="Matthew Meade's Portfolio" />
-        <title>Matthew Meade</title>
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+    <script async defer data-domain="matthewmeade.ca" src="https://plausible.matthewmeade.ca/js/plausible.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#343a40" />
+    <meta name="description" content="Matthew Meade's Portfolio" />
+    <title>Matthew Meade</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
